--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,21 +1,15 @@
-<p style="color: green"><%= notice %></p>
-
+<p style="color: green">
+  <%= notice %>
+</p>
 <h1>Tweets</h1>
-
-<%= form_tag(search_tweets_path, method: "get") do %>
-  <%= text_field_tag :keyword, params[:keyword], placeholder: "Buscar tweets..." %>
-  <%= submit_tag "Buscar" %>
-<% end %>
 <br>
-<div id="tweets">
-  <% @tweets.each do |tweet| %>
-    <%= render tweet %>
-    <p>
-      <%= link_to "Show this tweet", tweet %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New tweet", new_tweet_path %>
-
+    <div id="tweets">
+      <% @tweets.each do |tweet| %>
+        <%= render tweet %>
+          <p>
+            <%= link_to "Show this tweet" , tweet %>
+          </p>
+          <% end %>
+    </div>
 <%= will_paginate @tweets %>
+    
