--- a/app/views/tweets/search.html.erb
+++ b/app/views/tweets/search.html.erb
@@ -10,3 +10,11 @@
     </div>
   <% end %>
 <% end %>
+
+<%= form_tag(search_tweets_path, method: "get" ) do %>
+      <%= text_field_tag :keyword, params[:keyword], placeholder: "Buscar tweets...", class:"my-2" %>
+        <%= submit_tag "Buscar" %>
+          <% end %>
+
+
+<%= link_to "Back to tweets", tweets_path %>
